XXL-Job的引入；部分依赖修改

--- a/af-common/pom.xml
+++ b/af-common/pom.xml
@@ -31,5 +31,12 @@
 		    <artifactId>knife4j-spring-boot-starter</artifactId>
 		    <version>3.0.3</version>
 		</dependency>
+        <!-- redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.6.5</version>
+        </dependency>
  	</dependencies>
+
 </project>
