--- a/af-could-information/pom.xml
+++ b/af-could-information/pom.xml
@@ -11,4 +11,18 @@
   <modules>
   	<module>af-could-rabbitmq-consume</module>
   </modules>
+
+  <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+    </dependency>
+    <!--添加AMQP的启动器-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
+  </dependencies>
 </project>
