--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
       <java.version>1.8</java.version>
-      
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
   </properties>
   
   <dependencies>
@@ -55,27 +55,11 @@
             <artifactId>junit</artifactId>
         </dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
-		<dependency>
-		    <groupId>com.rabbitmq</groupId>
-		    <artifactId>amqp-client</artifactId>
-		</dependency>
-		<!--添加AMQP的启动器-->
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-
-		<!-- redis-->
-		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
         <dependency>
 		     <groupId>org.apache.commons</groupId>
 		     <artifactId>commons-pool2</artifactId>
 		</dependency>
-		
+
          <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -200,6 +184,16 @@
         </dependency>        
    </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <!-- redis-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.6.5</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
    <build>
         <plugins>
             <plugin>
